--- a/Clean_Data.ipynb
+++ b/Clean_Data.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Libraries\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,63 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0       Sometimes I'm up, sometimes I'm down. Everythi...\n",
-      "1                              I think my dogs are broken\n",
-      "2                                Damn. I used to be smart\n",
-      "3       Chihuahuas should not be a breed. Everyone fre...\n",
-      "4       Nothing brings me more joy than watching my pi...\n",
-      "                              ...                        \n",
-      "2300                                                  NaN\n",
-      "2301    (Him is such a bigger boy. Him Daddy's bigger ...\n",
-      "2302    I read so many different types of comments on ...\n",
-      "2303                                                  NaN\n",
-      "2304                 APPS.FACEBOOK.COM\\nLog into Facebook\n",
-      "Name: text, Length: 2305, dtype: object\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(df['text'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0       2021-04-19 15:02:00\n",
-      "1       2021-04-18 01:41:00\n",
-      "2       2021-04-16 17:12:00\n",
-      "3       2021-04-16 11:27:00\n",
-      "4       2021-04-16 10:58:00\n",
-      "               ...         \n",
-      "2300    2017-01-04 20:01:00\n",
-      "2301    2016-12-24 00:42:00\n",
-      "2302    2016-11-23 19:31:00\n",
-      "2303    2016-01-26 22:23:00\n",
-      "2304    2011-12-20 22:45:00\n",
-      "Name: time, Length: 2305, dtype: object\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(df['time'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,56 +38,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_posts=df_posts.mask(df.applymap(str).eq('[]'))\n",
+    "df_posts=df_posts.fillna('None')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_posts=df_posts.sort_values(by='time')\n",
+    "df_posts = df_posts.reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_posts['date']=pd.to_datetime(df_posts['time'], format='%Y-%m-%d %H:%M:%S').dt.strftime('%Y-%m-%d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create dataframe\n",
+    "df_date= pd.DataFrame()\n",
+    "\n",
+    "#Add fields\n",
+    "df_date['date']=df_posts['date']\n",
+    "df_date['index'] = df_date.index\n",
+    "df_date['count'] = df_date['index']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                     time                                               text  \\\n",
-      "0     2021-04-19 15:02:00  Sometimes I'm up, sometimes I'm down. Everythi...   \n",
-      "1     2021-04-18 01:41:00                         I think my dogs are broken   \n",
-      "2     2021-04-16 17:12:00                           Damn. I used to be smart   \n",
-      "3     2021-04-16 11:27:00  Chihuahuas should not be a breed. Everyone fre...   \n",
-      "4     2021-04-16 10:58:00  Nothing brings me more joy than watching my pi...   \n",
-      "...                   ...                                                ...   \n",
-      "2300  2017-01-04 20:01:00                                               None   \n",
-      "2301  2016-12-24 00:42:00  (Him is such a bigger boy. Him Daddy's bigger ...   \n",
-      "2302  2016-11-23 19:31:00  I read so many different types of comments on ...   \n",
-      "2303  2016-01-26 22:23:00                                               None   \n",
-      "2304  2011-12-20 22:45:00               APPS.FACEBOOK.COM\\nLog into Facebook   \n",
+      "           date  count\n",
+      "0    2011-12-20      1\n",
+      "1    2016-01-26      1\n",
+      "2    2016-11-23      1\n",
+      "3    2016-12-24      1\n",
+      "4    2017-01-04      2\n",
+      "..          ...    ...\n",
+      "630  2021-04-14      1\n",
+      "631  2021-04-15      2\n",
+      "632  2021-04-16      3\n",
+      "633  2021-04-18      1\n",
+      "634  2021-04-19      1\n",
       "\n",
-      "                                                 images video  \n",
-      "0                                                  None  None  \n",
-      "1     ['https://scontent-lga3-1.xx.fbcdn.net/v/t1.64...  None  \n",
-      "2                                                  None  None  \n",
-      "3                                                  None  None  \n",
-      "4                                                  None  None  \n",
-      "...                                                 ...   ...  \n",
-      "2300  ['https://scontent-lga3-1.xx.fbcdn.net/v/t1.18...  None  \n",
-      "2301                                               None  None  \n",
-      "2302                                               None  None  \n",
-      "2303  ['https://scontent-lga3-1.xx.fbcdn.net/v/t1.18...  None  \n",
-      "2304                                               None  None  \n",
-      "\n",
-      "[2305 rows x 4 columns]\n"
+      "[635 rows x 2 columns]\n"
      ]
     }
    ],
    "source": [
-    "df_posts=df_posts.mask(df.applymap(str).eq('[]'))\n",
-    "df_posts=df_posts.fillna('None')\n",
-    "print(df_posts)"
+    "df_date2 = df_date.groupby('date')['count'].nunique()\n",
+    "df_date2=df_date2.to_frame().reset_index()\n",
+    "\n",
+    "print(df_date2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_posts.to_csv('JBC_timeline.csv')"
+    "df_date2.to_csv('JBC_dates.csv',index=False)"
    ]
   },
   {
